[workspace]
members = [ "popover", "primitives", "storybook", "storybook_utils", "toggle", "utils", "icons", "toggle_group", "roving_focus", "switch", "separator", "checkbox", "radio_group", "attr_passer", "presence", "listbox", "testing_tools", "synchi", "virtual_list", "fetch", "fetch_utils", "signal"]
resolver = "2"

[patch.crates-io]
yewlish-presence = { path = "./presence" }
yewlish-attr-passer = { path = "./attr_passer" }
yewlish-utils = { path = "./utils" }
yewlish-synchi = { path = "./synchi" }
yewlish-testing-tools = { path = "./testing_tools" }
yewlish-roving-focus = { path = "./roving_focus" }
yewlish-fetch = { path = "./fetch" }
yewlish-fetch-utils = { path = "./fetch_utils" }
