[package]
name = "attr_passer"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4.22"
yew = "0.21.0"
synchi = { path = "../synchi" }
wasm-bindgen-test = "0.3.42"

[dev-dependencies]
wasm-bindgen-futures = "0.4.42"
gloo-utils = "0.2.0"
yewlish-testing-tools = { path = "../testing_tools" }
