[package]
name = "yewlish-attr-passer"
version = "0.1.1"
edition = "2021"
authors = ["Kirill Korotkov <personal.gugfug@gmail.com>"]
license = "MIT OR Apache-2.0"
description = "A Yew component that passes custom attributes to its child."
repository = "https://github.com/patchwork-body/yewlish.git"
documentation = "https://docs.rs/yewlish-attr-passer"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4.22"
yew = "0.21.0"
yewlish-synchi = "0.1.0"

[dev-dependencies]
wasm-bindgen-test = "0.3.42"
wasm-bindgen-futures = "0.4.42"
gloo-utils = "0.2.0"
yewlish-testing-tools = "0.1.4"
