[package]
name = "yewlish-checkbox"
version = "0.1.7"
edition = "2021"
authors = ["Kirill Korotkov <personal.gugfug@gmail.com>"]
license = "MIT OR Apache-2.0"
description = "A Yew component that represents a checkbox."
repository = "https://github.com/patchwork-body/yewlish.git"
documentation = "https://docs.rs/yewlish-checkbox"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
yew = "0.21.0"
yewlish-attr-passer = "0.1.2"
yewlish-presence = "0.1.2"
yewlish-utils = "0.1.4"
log = "0.4.22"

[dev-dependencies]
wasm-bindgen-futures = "0.4.42"
web-sys = "0.3.70"
wasm-bindgen-test = "0.3.42"
gloo-utils = "0.2.0"
yewlish-testing-tools = "0.1.4"
