[package]
name = "yewlish-checkbox"
version = "0.1.12"
edition = "2021"
authors = ["Kirill Korotkov <personal.gugfug@gmail.com>"]
license = "MIT OR Apache-2.0"
description = "A Yew component that represents a checkbox."
repository = "https://github.com/patchwork-body/yewlish.git"
documentation = "https://docs.rs/yewlish-checkbox"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
yew = "0.21.0"
yewlish-attr-passer = "^0.1"
yewlish-presence = "^0.1"
yewlish-utils = "^0.1"
web-sys = {version = "^0.3", features = ["HtmlButtonElement"]}

[dev-dependencies]
wasm-bindgen-futures = "^0.4"
wasm-bindgen-test = "^0.3"
gloo-utils = "^0.2"
yewlish-testing-tools = "^1"
