[package]
name = "yewlish-fetch"
version = "0.2.5"
edition = "2021"
authors = ["Kirill Korotkov <personal.gugfug@gmail.com>"]
license = "MIT OR Apache-2.0"
description = "A macro for generating Yew fetch API bindings."
repository = "https://github.com/patchwork-body/yewlish.git"
documentation = "https://docs.rs/yewlish-fetch"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
heck = "^0.5.0"
quote = "^1.0.0"
syn = "^2.0.0"
yew = "0.21.0"
yewlish-fetch-utils = "0.2.3"

[dev-dependencies]
yewlish-testing-tools = "1.2.1"
wasm-bindgen-test = "^0.3.0"
wasm-bindgen = "^0.2.0"
wasm-bindgen-futures = "^0.4.0"
serial_test = "^3.1.1"
serde = {version = "^1.0.0", features = ["derive"]}
web-sys = {version = "^0.3.0", features = ["AbortController"]}

[lib]
proc-macro = true
