[package]
name = "yewlish-fetch"
version = "0.3.0-rc.1"
edition = "2021"
authors = ["Kirill Korotkov <personal.gugfug@gmail.com>"]
license = "MIT OR Apache-2.0"
description = "A macro for generating Yew fetch API bindings."
repository = "https://github.com/patchwork-body/yewlish.git"
documentation = "https://docs.rs/yewlish-fetch"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
heck = "^0.5"
quote = "^1"
syn = "^2"
yew = "0.21"
yewlish-fetch-utils = "0.3.0-rc.1"

[dev-dependencies]
yewlish-testing-tools = "1.3"
wasm-bindgen-test = "^0.3"
wasm-bindgen = "^0.2"
wasm-bindgen-futures = "^0.4"
serial_test = "^3.1"
serde = "^1"

[lib]
proc-macro = true
