[package]
name = "yewlish-fetch-utils"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = "1.0.210"
serde_json = "1.0.128"
serde_urlencoded = "0.7.1"
thiserror = "1.0.64"
url = "2.5.2"
wasm-bindgen = "0.2.93"
wasm-bindgen-futures = "0.4.43"
wasm-bindgen-test = "0.3.43"
web-sys = {version = "0.3.70", features = ["Headers", "RequestInit", "RequestMode", "Response", "Window"]}
