[package]
name = "yewlish-fetch-utils"
version = "0.2.1"
edition = "2021"
authors = ["Kirill Korotkov <personal.gugfug@gmail.com>"]
license = "MIT OR Apache-2.0"
description = "A collection of useful utilities for working with fetch API, JSON marshalling, and URL manipulation in Yew applications."
repository = "https://github.com/patchwork-body/yewlish.git"
documentation = "https://docs.rs/yewlish-fetch-utils"

[dependencies]
js-sys = "0.3.70"
serde = "1.0.210"
serde_json = "1.0.128"
serde_urlencoded = "0.7.1"
sha1 = "0.10.6"
thiserror = "1.0.64"
url = "2.5.2"
wasm-bindgen = "0.2.93"
wasm-bindgen-futures = "0.4.43"
web-sys = {version = "0.3.70", features = ["Headers", "Request", "RequestInit", "RequestMode", "Response", "Url", "Window", "AbortSignal"]}
