[package]
name = "yewlish-fetch-utils"
version = "0.3.0-rc.1"
edition = "2021"
authors = ["Kirill Korotkov <personal.gugfug@gmail.com>"]
license = "MIT OR Apache-2.0"
description = "A collection of useful utilities for working with fetch API, JSON marshalling, and URL manipulation in Yew applications."
repository = "https://github.com/patchwork-body/yewlish.git"
documentation = "https://docs.rs/yewlish-fetch-utils"

[dependencies]
yew = "0.21"
js-sys = "^0.3"
serde = { version = "^1", features = ["derive"] }
serde_json = "^1"
serde_urlencoded = "^0.7"
sha1 = "^0.10"
thiserror = "^2.0"
url = "^2.5"
wasm-bindgen = "^0.2"
wasm-bindgen-futures = "^0.4"
web-sys = { version = "^0.3", features = ["Headers", "Request", "RequestInit", "RequestMode", "Response", "Url", "Window", "AbortSignal", "AbortController"] }
chrono = "0.4"
