[package]
name = "fetch-ws"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "server"
path = "src/bin/server.rs"

[[bin]]
name = "client"
path = "src/bin/client.rs"

[dependencies]
futures = "0.3.31"
yewlish-fetch = "0.3.0-beta.3"
yewlish-fetch-utils = "0.3.0-beta.2"
yew = { version = "0.21.0", features = ["csr"] }
web-sys = "0.3.68"
wasm-logger = "0.2.0"
wasm-bindgen = "0.2.95"
serde_json = "1.0.132"
serde = "1.0.213"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
warp = "0.3.7"
tokio = { version = "1.41.0", features = ["full"] }
