[package]
name = "popover"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
yew = "0.21.0"
web-sys = { version = "0.3.70", features = ["Element", "DomRect"] }
log = "0.4.21"
yewlish-presence = { version = "0.1.1" }
yewlish-attr-passer = "0.1.2"
yewlish-utils = "0.1.4"
yewlish-roving-focus = "0.1.0"
