[package]
name = "yewlish-popover"
version = "0.1.0-beta.3"
edition = "2021"
authors = ["Kirill Korotkov <personal.gugfug@gmail.com>"]
license = "MIT OR Apache-2.0"
description = "A Yew component for creating popovers."
repository = "https://github.com/patchwork-body/yewlish-popover.git"
documentation = "https://docs.rs/yewlish-popover"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
yew = "0.21"
web-sys = { version = "0.3", features = ["Element", "DomRect"] }
log = "0.4"
yewlish-presence = "0.1"
yewlish-attr-passer = "0.1"
yewlish-utils = "0.1"
yewlish-roving-focus = "0.1"
