[package]
name = "yewlish-presence"
version = "0.1.4"
edition = "2021"
authors = ["Kirill Korotkov <personal.gugfug@gmail.com>"]
license = "MIT OR Apache-2.0"
description = "A Yew component for managing the mount state of its child."
repository = "https://github.com/patchwork-body/yewlish.git"
documentation = "https://docs.rs/yewlish-presence"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4.22"
web-sys = {version = "0.3.72", features = ["CssAnimation", "CssStyleDeclaration", "HtmlElement", "Element", "Window"]}
yew = "0.21.0"
yewlish-attr-passer = "0.1.4"
