[package]
name = "roving_focus"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
implicit-clone = "0.4.9"
log = "0.4.21"
web-sys = {version = "0.3.69", features = ["KeyboardEventInit"]}
yew = "0.21.0"
