[package]
name = "yewlish-roving-focus"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4.21"
web-sys = {version = "0.3.70", features = ["KeyboardEventInit"]}
yew = "0.21.0"
yewlish-utils = { path = "../utils" }