[package]
name = "yewlish-roving-focus"
version = "0.1.0"
edition = "2021"
authors = ["Kirill Korotkov <personal.gugfug@gmail.com>"]
license = "MIT OR Apache-2.0"
description = "A Yew component that implements a roving focus inside the target element."
repository = "https://github.com/patchwork-body/yewlish.git"
documentation = "https://docs.rs/yewlish-roving-focus"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4.21"
web-sys = {version = "0.3.70", features = ["KeyboardEventInit"]}
yew = "0.21.0"
yewlish-utils = "0.1.4"
