[package]
name = "yewlish-switch"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
yew = "0.21.0"
yewlish-utils = "0.1.2"
yewlish-attr-passer = "0.1.2"
log = "0.4.22"

[dev-dependencies]
wasm-bindgen-futures = "0.4.42"
web-sys = "0.3.70"
wasm-bindgen-test = "0.3.42"
gloo-utils = "0.2.0"
yewlish-testing-tools = "0.1.4"
