[package]
name = "yewlish-synchi"
version = "0.1.0"
edition = "2021"
authors = ["Kirill Korotkov <gugfug.personal@gmail.com>"]
license = "MIT OR Apache-2.0"
description = "A global state management library designed to be used with yewlish componet set (pronounce as /sin-kai/)."
repository = "https://github.com/patchwork-body/yewlish.git"
documentation = "https://docs.rs/yewlish-synchi"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
yew = "0.21.0"

[dev-dependencies]
serial_test = "3.1.1"
