[package]
name = "yewlish-testing-tools"
version = "1.0.0"
edition = "2021"
authors = ["Kirill Korotkov <personal.gugfug@gmail.com>"]
license = "MIT OR Apache-2.0"
description = "A set of testing tools for the Yew framework."
repository = "https://github.com/patchwork-body/yewlish.git"
documentation = "https://docs.rs/yewlish-testing-tools"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4.22"
web-sys = { version = "0.3.70", features = ["Document", "DomParser", "SupportedType", "MouseEvent", "MouseEventInit", "KeyboardEvent", "KeyboardEventInit", "EventTarget", "EventInit", "HtmlButtonElement"] }
yew = { version = "0.21.0", features = ["csr", "ssr", "hydration"] }
wasm-bindgen-test = "0.3.43"
wasm-bindgen-futures = "0.4.43"
gloo-utils = "0.2.0"

[lib]
crate-type = ["cdylib", "rlib"]
