[package]
name = "yewlish-utils"
version = "0.1.5"
edition = "2021"
authors = ["Kirill Korotkov <personal.gugfug@gmail.com>"]
license = "MIT OR Apache-2.0"
description = "Common utils for yewlish component set"
repository = "https://github.com/patchwork-body/yewlish.git"
documentation = "https://docs.rs/yewlish-utils"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4.22"
web-sys = "0.3.70"
yew = "0.21.0"

[dev-dependencies]
wasm-bindgen-test = "0.3.43"
wasm-bindgen-futures = "0.4.43"
yewlish-testing-tools = "1.1.2"
